changed preloading order of images for better load times
Former-commit-id: 80c58db29fe29d17cd7e2f245b93c57c360d1e71

--- a/themes/oliver/layouts/_default/baseof.html
+++ b/themes/oliver/layouts/_default/baseof.html
@@ -29,12 +29,13 @@
 </head>
 <body>
   {{ partialCached "banner.html" . }}
-  {{ block "before_main" . }}{{ end }}
+  
   <main>
 
         {{ block "main" . }}{{ end }}
 
   </main>
+  {{ block "after_main" . }}{{ end }}
   {{ partialCached "footer.html" . }}
 </body>
 </html>
