--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -204,6 +204,22 @@ article a {
   display: inline-block;
 }
 
+.about {
+  columns: 2;
+}
+
+.about ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top:0;
+}
+.about h1 {
+  margin-top: 2rem;
+}
+.about h2 {
+  margin-bottom: 0;
+}
+
 
 
 .page-centered-element {
