use single column in about page on small screens
Former-commit-id: 90e3d6590cae275e9af10b9ef86847da92797268

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -209,8 +209,15 @@ article a {
   display: inline-block;
 }
 
+
 .about {
-  columns: 2;
+  columns: 1;
+}
+@media (min-width: 992px)
+{
+  .about {
+    columns: 2;
+  }
 }
 
 .about ul {
