--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -210,27 +210,7 @@ article a {
 }
 
 
-.about {
-  columns: 1;
-}
-@media (min-width: 992px)
-{
-  .about {
-    columns: 2;
-  }
-}
 
-.about ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin-top:0;
-}
-.about h1 {
-  margin-top: 2rem;
-}
-.about h2 {
-  margin-bottom: 0;
-}
 
 
 
@@ -268,6 +248,28 @@ ul.tags li{
   padding: 0.2rem;
 }
 
+/* about page */
+.about {
+  columns: 1;
+}
+@media (min-width: 992px)
+{
+  .about {
+    columns: 2;
+  }
+}
+
+.about ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top:0;
+}
+.about h1 {
+  margin-top: 2rem;
+}
+.about h2 {
+  margin-bottom: 0;
+}
 
 
 /* for the index view */
@@ -282,22 +284,53 @@ ul.tags li{
 
 .wrapper {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
+@media (min-width: 768px)
+{
+  .wrapper {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (min-width: 992px)
+{
+  .wrapper {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+
 
 .wrapper>div:not(.line) {
   padding: 1rem;
 }
 
-/* .wrapper > div:first-of-type,
-.line + div {
-  grid-column: 2;
-} */
-
-.line {
+.line2 {
+  grid-column: 1 / -1;
+  height: 2px;
+  background-color: black;
+}
+.line4 {
   grid-column: 1 / -1;
   height: 2px;
   background: black;
+  display: none;
+}
+.line6 {
+  grid-column: 1 / -1;
+  height: 2px;
+  background: black;
+  display: none;
+}
+@media (min-width: 768px)
+{
+  .line2 {display: none;}
+  .line4 { display: inherit; }
+}
+@media (min-width: 992px)
+{
+  .line2 {display: none;}
+  .line4 {display: none;}
+  .line6 { display: inherit; }
 }
 
 .wrapper img:hover {
