index page gets 8 columns on large screens
Former-commit-id: 15968a13896de27cf502f2dbe717d5b153651b2c

--- a/themes/oliver/layouts/projects/list.html
+++ b/themes/oliver/layouts/projects/list.html
@@ -35,6 +35,9 @@
       {{if (modBool $index 6)}}
          <div class="line6 line"></div>
       {{ end }}
+      {{if (modBool $index 8)}}
+         <div class="line8 line"></div>
+      {{ end }}
 {{ end }}
     <div class="line"></div>
   </div>
