--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -210,10 +210,6 @@ article a {
 }
 
 
-
-
-
-
 .page-centered-element {
   position: absolute;
   left: 0;
@@ -258,6 +254,12 @@ ul.tags li{
     columns: 2;
   }
 }
+@media (min-width: 1200px)
+{
+  .about {
+    columns: 3;
+  }
+}
 
 .about ul {
   list-style-type: none;
@@ -272,7 +274,7 @@ ul.tags li{
 }
 
 
-/* for the index view */
+/* index view */
 * {
   box-sizing: border-box;
 }
@@ -299,6 +301,13 @@ ul.tags li{
   }
 }
 
+@media (min-width: 1200px)
+{
+  .wrapper {
+    grid-template-columns: repeat(8, 1fr);
+  }
+}
+
 
 .wrapper>div:not(.line) {
   padding: 1rem;
@@ -321,6 +330,12 @@ ul.tags li{
   background: black;
   display: none;
 }
+.line8 {
+  grid-column: 1 / -1;
+  height: 2px;
+  background: black;
+  display: none;
+}
 @media (min-width: 768px)
 {
   .line2 {display: none;}
@@ -331,6 +346,13 @@ ul.tags li{
   .line2 {display: none;}
   .line4 {display: none;}
   .line6 { display: inherit; }
+}
+@media (min-width: 1200px)
+{
+  .line2 {display: none;}
+  .line4 {display: none;}
+  .line6 { display: none; }
+  .line8 {display: inherit;}
 }
 
 .wrapper img:hover {
