fixed: background position on index is always centered
Former-commit-id: c99493a9fff8d18ba0be31671d8d758743960a3e

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -209,9 +209,8 @@ article a {
   display: inline-block;
 }
 
-
 .page-centered-element {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   top: 0;
@@ -222,6 +221,7 @@ article a {
 }
 .content {
   text-align: center;
+  overflow: hidden;
 }
 
 .spacer {
