change background on scroll
Former-commit-id: d5ba89a65ea2b688ba42e1434480e66bd529458a

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -193,6 +193,10 @@ a {
     transform: translateX(calc((100% - 100vw) / 2));
 }
 
+.show-as-background {
+  display: flex !important;
+}
+
 .background-content {
   display: none;
 }
