--- a/themes/oliver/layouts/_default/baseof.html
+++ b/themes/oliver/layouts/_default/baseof.html
@@ -15,8 +15,8 @@
     {{ end }}
   </title>
   <link rel="canonical" href="{{ .Permalink }}">
-  
   {{ resources.Get "css/base.temp.css" | resources.ExecuteAsTemplate "css/base.css" . | minify | fingerprint | .Page.Scratch.SetInMap "css" "base" }}
+  {{ resources.Get "js/mobilescroll.temp.js" | resources.ExecuteAsTemplate "js/mobilescroll.js" . | minify | fingerprint | .Page.Scratch.SetInMap "js" "mobilescroll" }}
   
   {{ block "loadshortcodes" . }}{{ with .Content }}{{ end }}{{ end }}
   {{ range .Scratch.GetSortedMapValues "css" }}
