fixed issue with image scrolling on mobile
Former-commit-id: 2417dd02fa191c6b948611279c466be4820253eb

--- a/themes/oliver/layouts/index.html
+++ b/themes/oliver/layouts/index.html
@@ -79,13 +79,13 @@ articles.addEventListener("mouseout", function(event){
 function onEnter(elem){
   let bgcontent = document.querySelector(`#background-for-${elem.id}`);
   if(!bgcontent) return;
-  bgcontent.style.display="flex";
+  bgcontent.classList.add("show-as-background");
 }
 
 function onLeave(elem){
   let bgcontent = document.querySelector(`#background-for-${elem.id}`);
   if(!bgcontent) return;
-  bgcontent.style.display="none";
+  bgcontent.classList.remove("show-as-background");
 }
 
 
