--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -317,6 +317,11 @@ ul.tags li{
 .wrapper>div:not(.line) {
   padding: 1rem;
 }
+.line-always {
+  grid-column: 1 / -1;
+  height: 2px;
+  background-color: black;
+}
 
 .line2 {
   grid-column: 1 / -1;
