homepage: links are full page width
the links to the projects on the homepage are full width now.


Former-commit-id: 6709741302c076c4f1bfd2c162e65e1b3701f3f7

--- a/themes/oliver/layouts/index.html
+++ b/themes/oliver/layouts/index.html
@@ -39,7 +39,7 @@
 {{ range where site.RegularPages "Type" "in" site.Params.mainSections }}
 
 <article id="{{ .UniqueID }}">
-  <a class="Heading-link u-clickable" href="{{ .Permalink }}" rel="bookmark">
+  <a class="homepageprojectlink" href="{{ .Permalink }}" rel="bookmark">
     <header>
       <h2>
         {{ .Title }}
