--- a/themes/oliver/layouts/_default/list.html
+++ b/themes/oliver/layouts/_default/list.html
@@ -10,8 +10,8 @@
   <div class="wrapper">
      <div class="line"></div>
 {{ range $index, $element := where site.RegularPages "Type" "in" site.Params.mainSections }}
-      {{ $imgpath := path.Join .Dir .Params.image }}
-      {{ $contentid := .UniqueID }}
+      {{ $imgpath := path.Join .File.Dir .Params.image }}
+      {{ $contentid := .File.UniqueID }}
       {{ $title := .Title }}
       {{ $link := .Permalink}}
       {{ with .Params.image }}
