fixed #9: picture don't have rounded corners anymore
Former-commit-id: 3eea42327c21f8210a85cc94d1dd336308d8e15e

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -16,7 +16,7 @@ main {
 
 img {
   max-width: 100%;
-  border-radius: 0.2rem;
+  /* border-radius: 0.2rem; */
 }
 
 pre {
@@ -187,6 +187,7 @@ a {
   align-items: center;
   background-color: blue;
 }
+
 
 .background-image {
     position: fixed;
