first draft of a scrollsnap feature
Former-commit-id: b3d22adad1d67c0a351656fd87b0d9a4e8fb214a

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -1,3 +1,6 @@
+html {
+      scroll-snap-type: y;
+}
 body {
   font-family: "Helvetica", "Arial", sans-serif;
   line-height: 1.6;
@@ -243,6 +246,12 @@ article a {
 .spacer {
     height: 13rem;
 }
+
+.scrollsnap {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+}
+
 /* .content-media-spacer { */
 /*     height: 13rem; */
 /*     background-color: orange; */
