--- a/themes/oliver/layouts/_default/baseof.html
+++ b/themes/oliver/layouts/_default/baseof.html
@@ -17,6 +17,7 @@
   <link rel="canonical" href="{{ .Permalink }}">
   {{ resources.Get "css/base.temp.css" | resources.ExecuteAsTemplate "css/base.css" . | minify | fingerprint | .Page.Scratch.SetInMap "css" "base" }}
   {{ resources.Get "js/mobilescroll.temp.js" | resources.ExecuteAsTemplate "js/mobilescroll.js" . | minify | fingerprint | .Page.Scratch.SetInMap "js" "mobilescroll" }}
+  {{ resources.Get "js/scrollsnap.temp.js" | resources.ExecuteAsTemplate "js/scrollsnap.js" . | fingerprint | .Page.Scratch.SetInMap "js" "scollsnap" }}
   
   {{ block "loadshortcodes" . }}{{ with .Content }}{{ end }}{{ end }}
   {{ range .Scratch.GetSortedMapValues "css" }}
