--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -1,5 +1,5 @@
 html {
-      scroll-snap-type: y;
+      scroll-snap-type: y mandatory;
 }
 body {
   font-family: "Helvetica", "Arial", sans-serif;
@@ -19,7 +19,7 @@ main {
 
 img {
   max-width: 100%;
-  max-height: 70vh;
+
   /* border-radius: 0.2rem; */
 }
 
@@ -210,6 +210,7 @@ a {
 
 .show-as-background {
   display: block !important;
+  max-height: 70vh;
 }
 
 .background-content {
