fixed bg image scaling on entry page
Former-commit-id: 36f87bd96eb0cc89d5bbfbf82c370fd3bf3848d3

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -66,6 +66,10 @@ figure {
   line-height: 1em;
 }
 
+figure img {
+    padding-bottom: 150px;
+}
+
 a {
   color: black;
   text-decoration: none;
@@ -209,8 +213,11 @@ a {
 }
 
 .show-as-background {
-  display: block !important;
-  max-height: 70vh;
+   display: block !important;
+}
+
+.show-as-background img {
+    max-height: 70vh;
 }
 
 .background-content {
