prevent gallery images from snapping under the nav header
Former-commit-id: 472fd73402b5e5528f7d09c3a68a6bae6799e566

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -1,5 +1,6 @@
 html {
       scroll-snap-type: y mandatory;
+      scroll-padding-top: 80px;
 }
 body {
   font-family: "Helvetica", "Arial", sans-serif;
@@ -67,7 +68,7 @@ figure {
 }
 
 figure img {
-    padding-bottom: 150px;
+    margin-bottom: 150px;
 }
 
 a {
