--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -1,8 +1,8 @@
 html {
-      scroll-snap-type: y mandatory;
+/*      scroll-snap-type: y mandatory;
       scroll-padding-top: 80px;
       scroll-snap-points-y: repeat(100%);
-      scroll-behavior: smooth;
+      scroll-behavior: smooth;*/
 }
 
 body {
@@ -72,8 +72,8 @@ figure {
 
 figure img {
     margin-bottom: 320px;
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
+/*    scroll-snap-align: center;
+    scroll-snap-stop: always;*/
     position: relative;
     height: 90vh;
     top: 80px;
@@ -93,7 +93,7 @@ figure img {
 
 .sticky {
     position: sticky;
-    top: 0px;
+    top: 80px;
 }
 
 
