--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -1,8 +1,8 @@
 html {
-/*      scroll-snap-type: y mandatory;
+      scroll-snap-type: y mandatory;
       scroll-padding-top: 80px;
       scroll-snap-points-y: repeat(100%);
-      scroll-behavior: smooth;*/
+      scroll-behavior: smooth;
 }
 
 body {
@@ -71,17 +71,20 @@ figure {
 }
 
 figure img {
-    margin-bottom: 320px;
-/*    scroll-snap-align: center;
-    scroll-snap-stop: always;*/
-    position: relative;
-    height: 90vh;
+    margin-bottom: 160px;
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
+    height: 80vh;
     top: 80px;
     transition: top 2s ease-out;
 /*         transition: position 2s ease-out; */
 
 }
 
+.fixed {
+    position: fixed;
+    top: 80px;
+}
 .static {
     position: static;
     top: 80px;
