switched to using a library for scrollsnapping
Former-commit-id: 8f2d27379a2fd8ca6ea66aa446b6d7a89be864ba

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -65,9 +65,8 @@ figure {
 }
 
 figure img {
-    margin-bottom: 80px;
-    height: 80vh;
-    top: 80px;
+    padding-top: 80px;
+    height: calc(100vh - 320);
 }
 
 a {
