switched to using a library for scrollsnapping
Former-commit-id: b1f08029efeadc7d4c2fb343eeff656fe11a4c08

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -69,6 +69,8 @@ figure img {
     max-height: 90vh;
     object-fit: contain;
     max-width: 60vw;
+    display: list-item;
+    margin:auto;
 }
 
 a {
@@ -202,7 +204,7 @@ article header {
 
 article p {
   margin-left: 10vw;
-  width: 50vw;
+  max-width: 50vw;
 }
 
 .background-image2{
