--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -62,15 +62,16 @@ figure {
   font-size: 1rem;
   text-align: center;
   line-height: 1em;
+  overflow: visible;
 }
 
 figure img {
-    padding-top: 10vh;
-    max-height: 90vh;
+    padding-top: 80px;
     object-fit: contain;
+    max-height: 100vh;
     max-width: 60vw;
     display: list-item;
-    margin:auto;
+    margin: auto;
 }
 
 a {
@@ -164,9 +165,8 @@ a {
 }
 
 .u-wrapper {
-  margin-left: 15vw;
-  margin-right: 15vw;
-  max-width: 70vw;
+/*  margin: auto;
+  max-width: 42rem;*/
 }
 
 .u-padding {
@@ -184,6 +184,10 @@ a {
   border-bottom: 2px solid black;
 }
 
+article { 
+  width: 100vw;
+}
+
 .articles .spacer {
   height: 15rem;
   border-bottom: 2px solid black;
@@ -196,16 +200,6 @@ a {
   margin-block-end: 0em;
 }
 
-
-article header {
-  margin-left: 10vw;
-  width: 50vw;
-}
-
-article p {
-  margin-left: 10vw;
-  max-width: 50vw;
-}
 
 .background-image2{
   display: flex;
@@ -268,6 +262,7 @@ article a {
 .spacer {
     height: 13rem;
 }
+
 
 /* .content-media-spacer { */
 /*     height: 13rem; */
@@ -409,4 +404,3 @@ ul.tags li{
 	-webkit-filter: grayscale(100%) !important;
 	filter: grayscale(100%) !important;
 }
-
