--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -62,7 +62,6 @@ figure {
   font-size: 1rem;
   text-align: center;
   line-height: 1em;
-  overflow: visible;
 }
 
 figure img {
@@ -185,9 +184,29 @@ a {
 }
 
 article { 
-  width: 100vw;
+  margin: auto;
 }
 
+article p {
+      max-width: 50vw;
+      margin: auto;
+}
+article header {
+      max-width: 50vw;
+      margin: auto;
+}
+
+@media (max-width: 1200px)
+{
+    article p {
+        max-width: 90vw;
+        margin: auto;
+    }
+    article header {
+        max-width: 90vw;
+        margin: auto;
+    }
+}
 .articles .spacer {
   height: 15rem;
   border-bottom: 2px solid black;
