changed line heigt on abut page
Former-commit-id: 9a5fbab72caf1c4e541aa18fd418e5af3f6f7143

--- a/themes/oliver/assets/css/base.temp.css
+++ b/themes/oliver/assets/css/base.temp.css
@@ -333,16 +333,9 @@ ul.tags li{
   columns: 1;
   margin: auto;
   max-width: 50vw;
+  line-height: 1;
 }
-/* ul, menu, dir { */
-/*     display: block; */
-/*     list-style-type: disc; */
-/*     margin-block-start: 1em; */
-/*     margin-block-end: 1em; */
-/*     margin-inline-start: 0px; */
-/*     margin-inline-end: 0px; */
-/*     padding-inline-start: 40px; */
-/* } */
+
 .about ul {
   list-style-type: none;
   padding-left: 0;
